--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,1 +1,4 @@
-recursive-include virtualenvwrapper *.sh
+include setup.py
+include distribute_setup.py
+include tests/*
+recursive-include docs *.rst *.py *.html *.css *.js *.png *.txt
