Update to work with virtualenvwrapper >= 2.9 instead of virtualenvwrapper.project.

--- a/tox.ini
+++ b/tox.ini
@@ -7,5 +7,4 @@ commands =
   ksh ./tests/run_tests {envdir} []
   bash ./tests/run_tests {envdir} []
 deps = 
-  virtualenvwrapper
-  virtualenvwrapper.project
+  virtualenvwrapper >= 2.9
